<resources>
    <string name="app_name">Addekh</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_for_everyone">Addekh for everyone</string>
    <string name="get_started">Get Started</string>
    <string name="product_name">Womens Top </string>
    <string name="product_price">Product Price</string>
    <string name="delivery_info">Description</string>
    <string name="product_delivery_desc">You also get an extra 10% off when using any of the given bank</string>
    <string name="return_policy">Return policy</string>
    <string name="return_policy_txt">All our foods are double checked before leaving our stores so by any case you found a broken product please contact our hotline immediately.</string>
    <string name="order_now">Order Now</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="no_internet_txt">Your internet connection is currently \n not available please check or try again.</string>
    <string name="try_again">Try Again</string>
    <string name="ok">Okay</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="internet_connection_required">Internet connection is required to run this app. Turn on mobile-network/Wi-Fi.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="close_the_app">Close the app?</string>
    <string name="confirm_close_the_app">Are you sure you want to close the app?</string>
    <string name="exit">Exit</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="_continue">CONTINUE</string>
    <string name="error_logging">invalid username or password provided</string>
    <string name="error_field_required">input is required</string>
    <string name="string_internet_connection_warning">Internet Connection not Available</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string-array name="SelectCategory">
        <item>Select Category</item>
        <item>Mobile</item>
        <item>Fashion</item>
    </string-array>
    <string-array name="SelectStore">
        <item>Select Store</item>
        <item>Mobile</item>
        <item>Fashion</item>
    </string-array>
    <string name="title_timer">Timer</string>
    <string-array name="city_india">
        <item>Pune</item>
        <item>Nashik</item>
        <item>Mumbai</item>
    </string-array>
    <string name="toolbar_update_profile">Update Profile</string>
    <string name="error_invalid_mobile">mobile number is too short</string>
    <string name="error_address">Enter Correct Address</string>
    <string name="error_invalid_email">email address is invalid</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1"><![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="Or">OR</string>
    <string name="Login_with_Email">Login with Email</string>
    <string name="Term">If you continue, you are accepting Terms and Conditions and Privacy Policy</string>
    <string name="whats_youe_name">Whats your name?</string>
    <string name="StrangerFeel">Stranger feel so impersonal, you know?</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="privacy_logout">Privacy and logout</string>
    <string name="Help_and_support">Help and support</string>
    <string name="Help_center">Help center and legal terms</string>
    <string name="next">Next</string>
    <string name="Chat">Chat</string>
    <string name="select_language">Select Language</string>
    <string name="English">English</string>
    <string name="country_code">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">We will send confirmation code to your phone.</string>
    <string name="title">Enter your phone</string>
    <string name="country">Country</string>
    <string name="india_s_leading_marketplace">India\'s Leading marketplace</string>
    <string name="find_cars_mobile_phones_etc">Find Cars, Mobile Phones etc</string>
    <string name="browse_categories">Browse categories</string>
    <string name="see_all">See all</string>
    <string name="hello">Hello</string>
    <string name="trending">Trending :</string>
    <string name="fresh_recommendations">Fresh recommendations</string>
    <string name="price_not_mentioned">Price not mentioned</string>
    <string name="Navigation_title">Where do you want to buy/sell products?</string>
    <string name="navigation_body">To enjoy all that  has to offer for you, we need to know where to look for them.</string>
    <string name="btn_text">Around me</string>
    <string name="phone_message">We sent a 4-digit code to</string>
    <string name="asterix">*</string>
    <string name="resend">RESEND CODE BY CALL</string>
    <string name="lbl_technical_error">Technical Error</string>
    <string name="toolbar_select_location">Select Your Location</string>
    <string name="title_select_state">Select State</string>
    <string name="title_select_city">Select City</string>
    <string name="view_edit_profile">View and edit profile</string>
    <string name="buy_packages_my_orders">Buy Packages and My Orders</string>
    <string name="packages_orders">Packages,orders,billing and invoices</string>
    <string name="no_messages_yet">No messages, yet?</string>
    <string name="keep_messages">We will keep messages for any items you are trying to buy in here</string>
    <string name="explore">Explore the latest ads</string>
    <string name="start_selling">Start selling</string>
    <string name="search">search</string>
    <string name="showing_results_for">Showing results for :</string>
    <string name="cars">Cars</string>
    <string name="property">Property</string>
    <string name="electronics">Electronics</string>
    <string name="billing_information">Billing Information</string>
    <string name="bill_details">Edit your billing name, address, etc.</string>
    <string name="invoice_details">See and download your invoices.</string>
    <string name="myorder_details">Active, scheduled and expired orders.</string>
    <string name="my_orders">My Orders</string>
    <string name="buy_details">Sell faster, more and at higher margins with packages.</string>
    <string name="buy_packages">Buy Packages</string>
    <string name="location">Location</string>
    <string name="delivery_and_collection">Delivery and Collection</string>
    <string name="hyderabad_mumbai_pune">Hyderabad, Mumbai, Pune</string>
    <string name="show_packages">Show Packages</string>
    <string name="categories">Categories</string>
    <string name="properties">Properties</string>
    <string name="autos_cars"> Autos (Cars)</string>
    <string name="jobs">Jobs</string>
    <string name="mobiles">Mobiles</string>
    <string name="electronics_and_appliances">Electronics and Appliances</string>
    <string name="bikes">Bikes</string>
    <string name="commercial_vehicles_and_spares">Commercial Vehicles and Spares</string>
    <string name="fashion">Fashion</string>
    <string name="books_sports_hobbies_and_more">Books, Sports, Hobbies and More</string>
    <string name="pets">Pets</string>
    <string name="nothing_here">Nothing here...</string>
    <string name="active_package">you dont have any active package</string>
    <string name="what_are_you_offering">What are you offering ?</string>
    <string name="invoices">Invoices</string>
    <string name="haven_t_you_triied_our_featured_ads_yet_increase_your_views">Haven\'t you tried our featured ads yet ? Increase your views</string>
    <string name="you_don_t_have_invoices">You don\'t have invoices</string>
    <string name="My_Ads">My Ads</string>
    <string name="you_havent_listed">You havent listed anything yet</string>
    <string name="let_go">Let go of what you dont use anymore</string>
    <string name="post">Post</string>
    <string name="you_havent_liked">You havent liked anything yet</string>
    <string name="collect">Collect all the things you like in one place</string>
    <string name="Discover">Discover</string>
    <string name="more_categories">More categories</string>
    <string name="Brands">Brand *</string>
    <string name="years">Year *</string>
    <string name="Owners">No. of Owners *</string>
    <string name="Add_title">Add title *</string>
    <string name="Describe_selling">Describe what you are selling *</string>
    <string name="mention_the_key">Mention the key fratures of your item (e.g. brand, model, age, type)</string>
    <string name="include_condition">Include condition, features and reason for selling</string>
    <string name="required_fields">*Required fields</string>
    <string name="includes_some_details">Include some details</string>
    <string name="Next">Next</string>
    <string name="_14_9_004">14.9.004</string>
    <string name="version">Version</string>
    <string name="invite_friends_to">Invite friends</string>
    <string name="test_new_features_in_advance">Test new features in advance</string>
    <string name="become_a_beta_tester">Become a beta tester</string>
    <string name="rate_us">Rate us</string>
    <string name="rate">If you love our app, please take a moment to rate it.</string>
    <string name="help">Help Center</string>
    <string name="privacy">Privacy</string>
    <string name="faq">See FAQ and contact Support</string>
    <string name="create_password">Create password</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account_and_delete_my_data">Deactivate account and delete my data</string>
    <string name="logout_from_all_devices">Logout from all devices</string>
    <string name="continue_without_location">Continue without Location</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email_address">enter email address</string>
    <string name="your_name">enter your name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
</resources>