<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/favorite"
    android:visibility="gone">

    <ImageView
        android:id="@+id/IvSilver_MultipleHeart_fav"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:background="@drawable/ic_heart_selected"
        android:layout_margin="@dimen/dp_10"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/TvHaventLiked_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/darkGreen"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/you_havent_liked"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/TvCollect_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/collect"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_margin="@dimen/dp_10"/>
    <Button
        android:id="@+id/btnDiscover_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/rectangle_for_tab_layout"
        android:text="@string/Discover"
        android:textColor="@color/white"
        android:padding="@dimen/dp_10"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_10"/>

</LinearLayout>