<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/product_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            />

<!--        <ImageView-->
<!--            android:id="@+id/product_fav"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:padding="5dp"-->
<!--            android:src="@drawable/ic_fav"-->
<!--            android:layout_alignParentRight="true"/>-->
    </RelativeLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:cardCornerRadius="@dimen/margin_10"
        android:layout_margin="@dimen/margin_10"
        app:cardElevation="4dp"
        android:layout_below="@id/linear">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/border"
                android:scaleType="fitXY"
                android:src="@drawable/ban1" />

            <ImageView
                android:id="@+id/tv_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/product_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:contentDescription="FavButtonDesc"
                android:src="@drawable/mobile1" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_img"
                android:fontFamily="sans-serif"
                android:text="3 mins ago"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_image"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@id/tv_img"
                android:text="blogs"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/rlLocationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_10"
                android:layout_below="@id/tv_img"
                android:gravity="right|end">

                <ImageView
                    android:id="@+id/ivLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_location_on_24"
                    app:tint="@color/grey" />



                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivLocation"
                    android:text="Nashik"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
           android:layout_below="@id/cardView">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/grey_light"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="@dimen/margin_10"
                android:layout_margin="@dimen/margin_10"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="@dimen/margin_10"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <!--    <TextView-->
                    <!--        android:id="@+id/product_price"-->
                    <!--        android:layout_width="match_parent"-->
                    <!--        android:layout_height="wrap_content"-->
                    <!--        android:layout_margin="@dimen/margin_10"-->
                    <!--        android:text="₹ 500"-->
                    <!--        android:gravity="left"-->
                    <!--        android:textColor="@color/primary"-->
                    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
                    <!--        app:layout_constraintEnd_toEndOf="parent"-->
                    <!--        app:layout_constraintStart_toStartOf="@+id/product_name"-->
                    <!--        app:layout_constraintTop_toBottomOf="@+id/product_name" />-->

                    <TextView
                        android:id="@+id/delivery_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="@string/delivery_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/delivery_info_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="@string/product_delivery_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/tv_Storename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="Store Name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_storeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="WestSide"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/tv_StoreAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="Address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_StoreAddr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="Nashik"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_StorePhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="Contact"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">

                        <TextView
                            android:id="@+id/tv_StoreContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:layout_gravity="left"
                            android:layout_centerVertical="true"
                            android:text="9503663605"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|end"
                            android:padding="@dimen/margin_10"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/heart_background"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_fav" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/five"
                        android:weightSum="2">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:background="@drawable/button_shape"
                            android:backgroundTint="@color/white"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:drawableLeft="@drawable/ic_location_on_24"
                            android:text="Description"
                            android:textColor="@color/white" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_share_24"
                            android:background="@drawable/button_shape"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:backgroundTint="@color/white"
                            android:text="Share"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="AD ID:"
                            android:textColor="@color/black"
                            android:layout_margin="@dimen/margin_10"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:id="@+id/tv_AdId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="400520"
                            android:layout_marginTop="@dimen/margin_10"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/tv_ReportId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10"
                            android:text="Report ID"
                            android:textColor="@color/primary"
                            android:gravity="center_horizontal|right"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
        </LinearLayout>


</RelativeLayout>